--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Landing Page</title>
-  <link href="CSS/app.css" rel="stylesheet" />
+  <link href="CSS/app.css" rel="stylesheet">
 </head>
 
 <body>
